feature: create a new venv

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,17 @@ venv.bak/
 
 # git
 .gitignore
+
+# Python virtual environment
+venv/
+.env
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
